Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-10-20 15:54+0000\n"
+"PO-Revision-Date: 2012-11-02 10:34+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:52+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-11-03 04:41+0000\n"
+"X-Generator: Launchpad (build 16218)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -69,7 +69,7 @@ msgstr "Nébuleuse de Bode"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Galaxie du Cigare"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -102,7 +102,7 @@ msgstr "Nébuleuse Californie"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "Centaurus A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -173,7 +173,7 @@ msgstr "Grand Amas d'Hercule"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Galaxie d'Andromède"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -529,11 +529,11 @@ msgstr "Persée"
 
 #: skycultures/arabic/constellation_names.eng.fab:37
 msgid "The Whale"
-msgstr ""
+msgstr "La Baleine"
 
 #: skycultures/arabic/constellation_names.eng.fab:38
 msgid "The Southern Whale"
-msgstr ""
+msgstr "La Baleine du Sud"
 
 #: skycultures/arabic/constellation_names.eng.fab:39
 msgid "The Arrow"
@@ -565,7 +565,7 @@ msgstr "La Petite Ourse"
 
 #: skycultures/arabic/constellation_names.eng.fab:46
 msgid "The Ship"
-msgstr ""
+msgstr "Le Navire"
 
 #: skycultures/arabic/constellation_names.eng.fab:47
 msgid "The Maiden"
@@ -589,11 +589,11 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:3
 msgid "Horse flank"
-msgstr ""
+msgstr "Le flanc du cheval"
 
 #: skycultures/arabic/star_names.fab:4
 msgid "The breast"
-msgstr ""
+msgstr "La poitrine"
 
 #: skycultures/arabic/star_names.fab:5
 msgid "The second frog"
@@ -601,11 +601,11 @@ msgstr "Beta Ceti"
 
 #: skycultures/arabic/star_names.fab:6
 msgid "The rope"
-msgstr ""
+msgstr "La corde"
 
 #: skycultures/arabic/star_names.fab:7
 msgid "The knee"
-msgstr ""
+msgstr "Le genou"
 
 #: skycultures/arabic/star_names.fab:8
 msgid "End of the river"
@@ -4908,7 +4908,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:209
 msgid "Nashira"
-msgstr ""
+msgstr "Nashira"
 
 #: skycultures/western/star_names.fab:210
 msgid "Azelfafage"
