--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-01 19:53+0700\n"
-"PO-Revision-Date: 2012-10-27 12:37+0000\n"
+"PO-Revision-Date: 2012-11-02 10:16+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-02 04:39+0000\n"
+"X-Launchpad-Export-Date: 2012-11-03 04:41+0000\n"
 "X-Generator: Launchpad (build 16218)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -577,6 +577,9 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"Seules les commandes auxquelles est attribué un raccourci clavier sont "
+"indiquées ci-dessous. Pour afficher d'autres commandes, cliquer sur le "
+"bouton « %1 »."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
