--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-01 19:53+0700\n"
-"PO-Revision-Date: 2012-10-24 04:44+0000\n"
+"PO-Revision-Date: 2012-11-02 08:45+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-02 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-11-03 04:41+0000\n"
 "X-Generator: Launchpad (build 16218)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -566,6 +566,8 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"Ниже перечислены только действия с клавиатурыми сокращениями. Остальные "
+"действия доступны по кнопке \"%1\"."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
