--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-11-03 19:18+0000\n"
+"PO-Revision-Date: 2012-11-04 19:18+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-04 04:53+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-05 04:39+0000\n"
+"X-Generator: Launchpad (build 16232)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -424,7 +424,7 @@ msgstr "Le Petit Chien"
 
 #: skycultures/arabic/constellation_names.eng.fab:11
 msgid "The Young Goat"
-msgstr ""
+msgstr "Le Chevreau"
 
 #: skycultures/arabic/constellation_names.eng.fab:12
 msgid "Who (Lady) Has Chair"
@@ -461,7 +461,7 @@ msgstr "Le Corbeau"
 
 #: skycultures/arabic/constellation_names.eng.fab:20
 msgid "The Great Cup"
-msgstr ""
+msgstr "La grande Coupe"
 
 #: skycultures/arabic/constellation_names.eng.fab:21
 msgid "The Hen"
@@ -581,11 +581,11 @@ msgstr "Le Loup"
 
 #: skycultures/arabic/star_names.fab:1
 msgid "Horse navel"
-msgstr ""
+msgstr "L'Ombilic du cheval"
 
 #: skycultures/arabic/star_names.fab:2
 msgid "Tinted palm"
-msgstr ""
+msgstr "La main teinte au henné"
 
 #: skycultures/arabic/star_names.fab:3
 msgid "Horse flank"
@@ -609,67 +609,67 @@ msgstr "Le genou"
 
 #: skycultures/arabic/star_names.fab:8
 msgid "End of the river"
-msgstr ""
+msgstr "La Fin du fleuve"
 
 #: skycultures/arabic/star_names.fab:9
 msgid "Belly of Cetus"
-msgstr ""
+msgstr "Le Tronc du monstre marin"
 
 #: skycultures/arabic/star_names.fab:10
 msgid "The triangle - The first companionable"
-msgstr ""
+msgstr "Le premier sommet du triangle"
 
 #: skycultures/arabic/star_names.fab:11
 msgid "The second sign"
-msgstr ""
+msgstr "La deuxième Marque"
 
 #: skycultures/arabic/star_names.fab:12
 msgid "The first sign"
-msgstr ""
+msgstr "La première Marque"
 
 #: skycultures/arabic/star_names.fab:13
 msgid "The rope knot"
-msgstr ""
+msgstr "La Robe"
 
 #: skycultures/arabic/star_names.fab:14
 msgid "Earthkid"
-msgstr ""
+msgstr "Le Lynx du désert"
 
 #: skycultures/arabic/star_names.fab:15
 msgid "A butter"
-msgstr ""
+msgstr "Le Coup de corne"
 
 #: skycultures/arabic/star_names.fab:16
 msgid "The goat"
-msgstr ""
+msgstr "Le Petit Chevreau"
 
 #: skycultures/arabic/star_names.fab:17
 msgid "The hatching-place"
-msgstr ""
+msgstr "Le Nid d'autruche"
 
 #: skycultures/arabic/star_names.fab:18
 msgid "The aggrieved-end of the river"
-msgstr ""
+msgstr "L'Autruche mâle"
 
 #: skycultures/arabic/star_names.fab:19
 msgid "The nostril"
-msgstr ""
+msgstr "La Narine"
 
 #: skycultures/arabic/star_names.fab:20
 msgid "The ghoul"
-msgstr ""
+msgstr "La Gorgone"
 
 #: skycultures/arabic/star_names.fab:21
 msgid "The little belly"
-msgstr ""
+msgstr "Le petit Ventre"
 
 #: skycultures/arabic/star_names.fab:22
 msgid "The elbow of the Pleiades"
-msgstr ""
+msgstr "Le Flanc"
 
 #: skycultures/arabic/star_names.fab:23 skycultures/arabic/star_names.fab:25
 msgid "Shoulder of the Pleiades"
-msgstr ""
+msgstr "L'Omoplate"
 
 #: skycultures/arabic/star_names.fab:24
 msgid "The Pleiades"
@@ -677,95 +677,95 @@ msgstr "La Pléïade"
 
 #: skycultures/arabic/star_names.fab:26
 msgid "One of the eggs"
-msgstr ""
+msgstr "Les Oeufs des autruches"
 
 #: skycultures/arabic/star_names.fab:27
 msgid "One of the eggs shells"
-msgstr ""
+msgstr "Les Coquilles d'oeufs"
 
 #: skycultures/arabic/star_names.fab:28
 msgid "Eye of the Bull"
-msgstr ""
+msgstr "L'Oeil du taureau"
 
 #: skycultures/arabic/star_names.fab:29
 msgid "Follower of the Pleiades"
-msgstr ""
+msgstr "La Suivante"
 
 #: skycultures/arabic/star_names.fab:30
 msgid "Footstool of the giant"
-msgstr ""
+msgstr "Le Trône"
 
 #: skycultures/arabic/star_names.fab:31
 msgid "The giant foot"
-msgstr ""
+msgstr "La Brave"
 
 #: skycultures/arabic/star_names.fab:32
 msgid "The Pleiades watcher"
-msgstr ""
+msgstr "La Chamelle"
 
 #: skycultures/arabic/star_names.fab:33
 msgid "The molar"
-msgstr ""
+msgstr "Le Précurseur"
 
 #: skycultures/arabic/star_names.fab:34
 msgid "Heel of the Reins holder"
-msgstr ""
+msgstr "Le Talon du cocher"
 
 #: skycultures/arabic/star_names.fab:35
 msgid "The camels quenching their thirst"
-msgstr ""
+msgstr "Les autruches qui ont étanché leur soif"
 
 #: skycultures/arabic/star_names.fab:36
 msgid "The zone"
-msgstr ""
+msgstr "La Ceinture d'Elgeuze"
 
 #: skycultures/arabic/star_names.fab:37
 msgid "The hare"
-msgstr ""
+msgstr "Le Trône d'Elgeuze"
 
 #: skycultures/arabic/star_names.fab:38
 msgid "White spot"
-msgstr ""
+msgstr "La Touffe de Cheveux"
 
 #: skycultures/arabic/star_names.fab:39
 msgid "The string of pearls"
-msgstr ""
+msgstr "La Série"
 
 #: skycultures/arabic/star_names.fab:40
 msgid "The dove"
-msgstr ""
+msgstr "L'Excellent"
 
 #: skycultures/arabic/star_names.fab:41
 msgid "The belt"
-msgstr ""
+msgstr "La Ceinture d'Elgeuze"
 
 #: skycultures/arabic/star_names.fab:42
 msgid "The sword"
-msgstr ""
+msgstr "Le Pied droit d'Elgeuze"
 
 #: skycultures/arabic/star_names.fab:43 skycultures/arabic/star_names.fab:57
 msgid "The weight"
-msgstr ""
+msgstr "Le Pendant de Hadar"
 
 #: skycultures/arabic/star_names.fab:44
 msgid "Shoulder of the giant"
-msgstr ""
+msgstr "La Main d’Elgeuze"
 
 #: skycultures/arabic/star_names.fab:45
 msgid "Shoulder of Reins holder"
-msgstr ""
+msgstr "L'Épaule du Cocher"
 
 #: skycultures/arabic/star_names.fab:46
 msgid "Forward foot"
-msgstr ""
+msgstr "Les Pluvieuses"
 
 #: skycultures/arabic/star_names.fab:47
 msgid "Individual stars"
-msgstr ""
+msgstr "Les Isolées"
 
 #: skycultures/arabic/star_names.fab:48
 msgid "The announcer of the southern Shinning one"
-msgstr ""
+msgstr "Mirzam"
 
 #: skycultures/arabic/star_names.fab:49 skycultures/western/star_names.fab:65
 msgid "Tejat"
@@ -777,51 +777,51 @@ msgstr "Suhail"
 
 #: skycultures/arabic/star_names.fab:51
 msgid "First one of the brand-mark"
-msgstr ""
+msgstr "La Marque au fer rouge"
 
 #: skycultures/arabic/star_names.fab:52
 msgid "The outstretched paw"
-msgstr ""
+msgstr "La patte déployée"
 
 #: skycultures/arabic/star_names.fab:53
 msgid "The southern Shinning one"
-msgstr ""
+msgstr "Aschère traversière"
 
 #: skycultures/arabic/star_names.fab:54
 msgid "The maidens"
-msgstr ""
+msgstr "Les Vierges"
 
 #: skycultures/arabic/star_names.fab:55
 msgid "The tow juror"
-msgstr ""
+msgstr "Les Deux qui poussent à jurer"
 
 #: skycultures/arabic/star_names.fab:56
 msgid "The pulled-in paw"
-msgstr ""
+msgstr "La Patte repliée"
 
 #: skycultures/arabic/star_names.fab:58
 msgid "Middle of the sky"
-msgstr ""
+msgstr "Le Milieu"
 
 #: skycultures/arabic/star_names.fab:59
 msgid "The maidenhood"
-msgstr ""
+msgstr "L'Hymen"
 
 #: skycultures/arabic/star_names.fab:60
 msgid "The announcer of the northern Shinning one"
-msgstr ""
+msgstr "Aschère aux Yeux chassieux"
 
 #: skycultures/arabic/star_names.fab:61
 msgid "The twins forward head"
-msgstr ""
+msgstr "Apollon"
 
 #: skycultures/arabic/star_names.fab:62
 msgid "The northern Shinning one"
-msgstr ""
+msgstr "Aschère aux Yeux chassieux"
 
 #: skycultures/arabic/star_names.fab:63
 msgid "The twins posterior head"
-msgstr ""
+msgstr "Héraklès"
 
 #: skycultures/arabic/star_names.fab:64
 msgid "Suhayl hadar"
@@ -829,7 +829,7 @@ msgstr "Suhail hadar"
 
 #: skycultures/arabic/star_names.fab:65
 msgid "Sworn Suhayl"
-msgstr ""
+msgstr "Suhail qui pousse à jurer"
 
 #: skycultures/arabic/star_names.fab:66
 msgid "One of the antelopes"
@@ -837,71 +837,71 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:67
 msgid "Northern donkey"
-msgstr ""
+msgstr "L'Âne du Nord"
 
 #: skycultures/arabic/star_names.fab:68
 msgid "Southern donkey"
-msgstr ""
+msgstr "L'Âne du Nord"
 
 #: skycultures/arabic/star_names.fab:69
 msgid "The claw"
-msgstr ""
+msgstr "Les Pinces"
 
 #: skycultures/arabic/star_names.fab:70
 msgid "The third leap"
-msgstr ""
+msgstr "Le Saut des gazelles"
 
 #: skycultures/arabic/star_names.fab:71
 msgid "Suhayl the weight"
-msgstr ""
+msgstr "Suhail de Wazn"
 
 #: skycultures/arabic/star_names.fab:72
 msgid "The solitary one"
-msgstr ""
+msgstr "La Solitaire"
 
 #: skycultures/arabic/star_names.fab:73
 msgid "The glance of the lion"
-msgstr ""
+msgstr "Le Regard"
 
 #: skycultures/arabic/star_names.fab:74
 msgid "Head of the lion"
-msgstr ""
+msgstr "La Tête du lion"
 
 #: skycultures/arabic/star_names.fab:75
 msgid "Heart of the lion"
-msgstr ""
+msgstr "Le Coeur du lion"
 
 #: skycultures/arabic/star_names.fab:76
 msgid "The northern one of the second leap"
-msgstr ""
+msgstr "La Main du grand Ours"
 
 #: skycultures/arabic/star_names.fab:77
 msgid "The forehead of the lion"
-msgstr ""
+msgstr "Le Front du lion"
 
 #: skycultures/arabic/star_names.fab:78
 msgid "The southern one of the second leap"
-msgstr ""
+msgstr "La Main du grand Ours"
 
 #: skycultures/arabic/star_names.fab:79
 msgid "The cup"
-msgstr ""
+msgstr "La Coupe"
 
 #: skycultures/arabic/star_names.fab:80
 msgid "The loins"
-msgstr ""
+msgstr "Le Bas-ventre du grand Ours"
 
 #: skycultures/arabic/star_names.fab:81
 msgid "The bear"
-msgstr ""
+msgstr "Aschère yéménite"
 
 #: skycultures/arabic/star_names.fab:82
 msgid "One of Al-zubarah"
-msgstr ""
+msgstr "La Croupe du lion"
 
 #: skycultures/arabic/star_names.fab:83
 msgid "Second Al-zubarah"
-msgstr ""
+msgstr "Les deux Trous"
 
 #: skycultures/arabic/star_names.fab:84
 msgid "The southern one of the first leap"
@@ -913,19 +913,19 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:86
 msgid "Tail of the lion"
-msgstr ""
+msgstr "La Queue du lion"
 
 #: skycultures/arabic/star_names.fab:87
 msgid "Corner of the barker"
-msgstr ""
+msgstr "L'Angle du Hurleur"
 
 #: skycultures/arabic/star_names.fab:88
 msgid "The thigh"
-msgstr ""
+msgstr "La Cuisse du grand Ours"
 
 #: skycultures/arabic/star_names.fab:89
 msgid "The tent"
-msgstr ""
+msgstr "La Tente"
 
 #: skycultures/arabic/star_names.fab:90
 msgid "The insertion-point of the Bear's tail"
@@ -933,15 +933,15 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:91
 msgid "The wing"
-msgstr ""
+msgstr "L'Aile du corbeau"
 
 #: skycultures/arabic/star_names.fab:92
 msgid "The raven"
-msgstr ""
+msgstr "Le Corbeau"
 
 #: skycultures/arabic/star_names.fab:93
 msgid "The inlet"
-msgstr ""
+msgstr "Le Golfe"
 
 #: skycultures/arabic/star_names.fab:94
 msgid "The lion Liver"
@@ -949,15 +949,15 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:95
 msgid "Vine-harvestress"
-msgstr ""
+msgstr "Qui précède la vendange"
 
 #: skycultures/arabic/star_names.fab:96
 msgid "Embrace"
-msgstr ""
+msgstr "Le premier Saut des gazelles"
 
 #: skycultures/arabic/star_names.fab:97
 msgid "The Undefended one"
-msgstr ""
+msgstr "Le Levier désarmé"
 
 #: skycultures/arabic/star_names.fab:98
 msgid "Al-suha"
@@ -965,11 +965,11 @@ msgstr "Al suha"
 
 #: skycultures/arabic/star_names.fab:99
 msgid "Leader-daughter of the bier"
-msgstr ""
+msgstr "Le Conducteur des filles de Nasch"
 
 #: skycultures/arabic/star_names.fab:100
 msgid "Single one of the lance-bearer"
-msgstr ""
+msgstr "L'Étoile isolée"
 
 #: skycultures/arabic/star_names.fab:101
 #: skycultures/western/star_names.fab:132
@@ -978,11 +978,11 @@ msgstr "Hadar"
 
 #: skycultures/arabic/star_names.fab:102
 msgid "shoulder of the centaur"
-msgstr ""
+msgstr "L'Épaule droite du centaure"
 
 #: skycultures/arabic/star_names.fab:103
 msgid "The Spear Thrower"
-msgstr ""
+msgstr "Le Levier armé"
 
 #: skycultures/arabic/star_names.fab:104
 msgid "One of Al-ghofer's"
@@ -990,51 +990,51 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:105
 msgid "The shepherd"
-msgstr ""
+msgstr "Le Gardien du nord"
 
 #: skycultures/arabic/star_names.fab:106
 msgid "Centaur foot"
-msgstr ""
+msgstr "La Jambe du centaure"
 
 #: skycultures/arabic/star_names.fab:107
 msgid "The loin-cloth"
-msgstr ""
+msgstr "La robe"
 
 #: skycultures/arabic/star_names.fab:108
 msgid "The brighter Pherkad"
-msgstr ""
+msgstr "Le Genou"
 
 #: skycultures/arabic/star_names.fab:109
 msgid "The southern claw"
-msgstr ""
+msgstr "Le Plateau austral"
 
 #: skycultures/arabic/star_names.fab:110
 msgid "The cattleman"
-msgstr ""
+msgstr "Le Bouvier"
 
 #: skycultures/arabic/star_names.fab:111
 msgid "The northern claw"
-msgstr ""
+msgstr "Le Plateau boréal"
 
 #: skycultures/arabic/star_names.fab:112
 msgid "The dimmer Pherkad"
-msgstr ""
+msgstr "Les deux Veaux"
 
 #: skycultures/arabic/star_names.fab:113
 msgid "Shepherd's crook"
-msgstr ""
+msgstr "La massue"
 
 #: skycultures/arabic/star_names.fab:114
 msgid "The hyena"
-msgstr ""
+msgstr "Les Hyènes"
 
 #: skycultures/arabic/star_names.fab:115
 msgid "The two series"
-msgstr ""
+msgstr "Les deux Séries"
 
 #: skycultures/arabic/star_names.fab:116
 msgid "The broken ring of stars"
-msgstr ""
+msgstr "La Brillante du Bris"
 
 #: skycultures/arabic/star_names.fab:117
 msgid "Neck of the snake"
@@ -1042,11 +1042,11 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:118
 msgid "Scorpion forehead"
-msgstr ""
+msgstr "Le Front du scorpion"
 
 #: skycultures/arabic/star_names.fab:119
 msgid "The scorpion"
-msgstr ""
+msgstr "Le Scorpion"
 
 #: skycultures/arabic/star_names.fab:120
 msgid "The preceding hand"
@@ -2313,7 +2313,7 @@ msgstr "Maison vide"
 
 #: skycultures/korean/constellation_names.eng.fab:72
 msgid "Weep"
-msgstr ""
+msgstr "Le pleur"
 
 #: skycultures/korean/constellation_names.eng.fab:73
 msgid "Sob"
