--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-03 20:34+0700\n"
-"PO-Revision-Date: 2012-10-24 04:27+0000\n"
+"PO-Revision-Date: 2012-11-04 16:34+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-04 04:51+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-05 04:39+0000\n"
+"X-Generator: Launchpad (build 16232)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -708,6 +708,8 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"Abajo se listan las acciones con teclas asignadas. Otras acciones pueden "
+"estar disponibles a través del botón \"%1%\"."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
