--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-11-04 19:18+0000\n"
+"PO-Revision-Date: 2012-11-05 21:20+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-05 04:39+0000\n"
+"X-Launchpad-Export-Date: 2012-11-06 04:47+0000\n"
 "X-Generator: Launchpad (build 16232)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -1050,63 +1050,63 @@ msgstr "Le Scorpion"
 
 #: skycultures/arabic/star_names.fab:120
 msgid "The preceding hand"
-msgstr ""
+msgstr "La Main précédente"
 
 #: skycultures/arabic/star_names.fab:121
 msgid "The succeeding hand"
-msgstr ""
+msgstr "La Main suivante"
 
 #: skycultures/arabic/star_names.fab:122
 msgid "The arteries"
-msgstr ""
+msgstr "Les Veines"
 
 #: skycultures/arabic/star_names.fab:123
 msgid "The scorpion heart"
-msgstr ""
+msgstr "Le Cœur du scorpion"
 
 #: skycultures/arabic/star_names.fab:124
 msgid "The elbow"
-msgstr ""
+msgstr "Le Coude"
 
 #: skycultures/arabic/star_names.fab:125
 msgid "The dancer"
-msgstr ""
+msgstr "Le Chameau qui trotte"
 
 #: skycultures/arabic/star_names.fab:126
 msgid "The preceding"
-msgstr ""
+msgstr "Le Prédécesseur"
 
 #: skycultures/arabic/star_names.fab:127
 msgid "Head of the kneeling one"
-msgstr ""
+msgstr "La Tête de l'Agenouillé"
 
 #: skycultures/arabic/star_names.fab:128
 msgid "Head of the dragon"
-msgstr ""
+msgstr "Les Chamelles qui viennent de mettre bas"
 
 #: skycultures/arabic/star_names.fab:129
 msgid "The wrist of the kneeling one"
-msgstr ""
+msgstr "Le Poignet"
 
 #: skycultures/arabic/star_names.fab:130
 msgid "The sting"
-msgstr ""
+msgstr "Le Dard"
 
 #: skycultures/arabic/star_names.fab:131
 msgid "Second one of the bier daughters"
-msgstr ""
+msgstr "L'Étoile"
 
 #: skycultures/arabic/star_names.fab:132
 msgid "The raised tail"
-msgstr ""
+msgstr "La Partie relevée de la queue du scorpion"
 
 #: skycultures/arabic/star_names.fab:133
 msgid "Head of the snake-charmer"
-msgstr ""
+msgstr "La Tête du serpentaire"
 
 #: skycultures/arabic/star_names.fab:134
 msgid "Dog of the shepherd"
-msgstr ""
+msgstr "Le Chien du berger"
 
 #: skycultures/arabic/star_names.fab:135
 msgid "The third incantation"
@@ -1114,63 +1114,63 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:136
 msgid "The first incantation"
-msgstr ""
+msgstr "Le Dragon"
 
 #: skycultures/arabic/star_names.fab:137
 msgid "Arrowhead"
-msgstr ""
+msgstr "La Pointe de la flèche"
 
 #: skycultures/arabic/star_names.fab:138
 msgid "The middle one of the bow"
-msgstr ""
+msgstr "Le milieu de l'Arc"
 
 #: skycultures/arabic/star_names.fab:139
 msgid "The southern one of the bow"
-msgstr ""
+msgstr "La partie sud de l'Arc"
 
 #: skycultures/arabic/star_names.fab:140
 msgid "The northern one of the bow"
-msgstr ""
+msgstr "La partie nord de l'Arc"
 
 #: skycultures/arabic/star_names.fab:141
 msgid "The swooping eagle"
-msgstr ""
+msgstr "La Harpe persanne"
 
 #: skycultures/arabic/star_names.fab:142
 msgid "The harp"
-msgstr ""
+msgstr "Le Sambuque"
 
 #: skycultures/arabic/star_names.fab:143
 msgid "Second outgoing ostriches"
-msgstr ""
+msgstr "La 2e autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:144
 msgid "The fatty tail"
-msgstr ""
+msgstr "Le Serpent"
 
 #: skycultures/arabic/star_names.fab:145
 msgid "The tortoise"
-msgstr ""
+msgstr "La Tortue"
 
 #: skycultures/arabic/star_names.fab:146
 msgid "The outgoing ostriches"
-msgstr ""
+msgstr "La 4e autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:147
 msgid "One of the andiron's"
-msgstr ""
+msgstr "Le Dragon"
 
 #: skycultures/arabic/star_names.fab:148
 msgid "The heel-tendon"
-msgstr ""
+msgstr "Le Talon du sagittaire"
 
 #: skycultures/arabic/star_names.fab:149
 msgid "The archer knee"
-msgstr ""
+msgstr "Le Genou du sagittaire"
 
 #: skycultures/arabic/star_names.fab:150
 msgid "The hen-bill"
-msgstr ""
+msgstr "L'Oiseau"
 
 #: skycultures/arabic/star_names.fab:151
 msgid "The arrow"
@@ -1178,23 +1178,23 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:152 skycultures/arabic/star_names.fab:154
 msgid "One of the balance's"
-msgstr ""
+msgstr "L'Aiguille de la balance"
 
 #: skycultures/arabic/star_names.fab:153
 msgid "The flying eagle"
-msgstr ""
+msgstr "L'aigle volant"
 
 #: skycultures/arabic/star_names.fab:155
 msgid "First lucky star of the slaughterer"
-msgstr ""
+msgstr "Le Chevreau"
 
 #: skycultures/arabic/star_names.fab:156
 msgid "Second lucky star of the slaughterer"
-msgstr ""
+msgstr "La Propice du Sacrificateur"
 
 #: skycultures/arabic/star_names.fab:157
 msgid "The breast - one of the cavalry's"
-msgstr ""
+msgstr "La Poitrine de la poule"
 
 #: skycultures/arabic/star_names.fab:158
 msgid "One of the sitting's"
@@ -1206,59 +1206,59 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:160
 msgid "Tail of the hen"
-msgstr ""
+msgstr "La Queue de la poule"
 
 #: skycultures/arabic/star_names.fab:161
 msgid "The wing- one of the cavalry's"
-msgstr ""
+msgstr "L'Aile de la poule"
 
 #: skycultures/arabic/star_names.fab:162
 msgid "One of swallower luck"
-msgstr ""
+msgstr "Le Propice de Bula"
 
 #: skycultures/arabic/star_names.fab:163
 msgid "Part of the horse"
-msgstr ""
+msgstr "La Section du cheval"
 
 #: skycultures/arabic/star_names.fab:164
 msgid "The right forearm"
-msgstr ""
+msgstr "Le précédent des deux Bras"
 
 #: skycultures/arabic/star_names.fab:165
 msgid "Second of the Alfirk's"
-msgstr ""
+msgstr "Le Troupeau"
 
 #: skycultures/arabic/star_names.fab:166
 msgid "One of the Luck of lucks"
-msgstr ""
+msgstr "La Propice des Propices"
 
 #: skycultures/arabic/star_names.fab:167
 msgid "One of the Nashira luck"
-msgstr ""
+msgstr "La Propice de Nashira"
 
 #: skycultures/arabic/star_names.fab:168
 msgid "The horse nose"
-msgstr ""
+msgstr "Le Nez du cheval"
 
 #: skycultures/arabic/star_names.fab:169
 msgid "Tail of the goat - Second Nashira luck"
-msgstr ""
+msgstr "La Queue du chevreau"
 
 #: skycultures/arabic/star_names.fab:170
 msgid "The blaze on a horse's brow"
-msgstr ""
+msgstr "La Tache blanche"
 
 #: skycultures/arabic/star_names.fab:171
 msgid "First lucky star of the king"
-msgstr ""
+msgstr "La Propice du Roi"
 
 #: skycultures/arabic/star_names.fab:172
 msgid "Second lucky star of the livestock"
-msgstr ""
+msgstr "La 2e Propice des bestiaux"
 
 #: skycultures/arabic/star_names.fab:173
 msgid "First lucky star of the livestock"
-msgstr ""
+msgstr "La 1ère Propice des bestiaux"
 
 #: skycultures/arabic/star_names.fab:174
 msgid "The hip"
@@ -1266,35 +1266,35 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:175
 msgid "First lucky star of the tents"
-msgstr ""
+msgstr "La Propice des Caches"
 
 #: skycultures/arabic/star_names.fab:176
 msgid "First lucky star of the high-minded man"
-msgstr ""
+msgstr "La Propice de Humam"
 
 #: skycultures/arabic/star_names.fab:177
 msgid "First lucky star of the rain"
-msgstr ""
+msgstr "La Propice de la pluie"
 
 #: skycultures/arabic/star_names.fab:178
 msgid "First lucky star of the excellent one"
-msgstr ""
+msgstr "La Propice de l'excellent"
 
 #: skycultures/arabic/star_names.fab:179
 msgid "The shin"
-msgstr ""
+msgstr "La Jambe"
 
 #: skycultures/arabic/star_names.fab:180
 msgid "Mouth of the fish"
-msgstr ""
+msgstr "La Grenouille antérieure"
 
 #: skycultures/arabic/star_names.fab:181
 msgid "The great horse shoulder"
-msgstr ""
+msgstr "Le Bras du cheval"
 
 #: skycultures/arabic/star_names.fab:182
 msgid "The great horse back"
-msgstr ""
+msgstr "L'Épaule du cheval"
 
 #: skycultures/arabic/star_names.fab:183
 msgid "Fourth one of Alkalaes"
@@ -1314,7 +1314,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:187
 msgid "The Scattered stars"
-msgstr ""
+msgstr "La Mangeoire"
 
 #: skycultures/arabic/star_names.fab:188
 msgid "The quarter"
@@ -1326,15 +1326,15 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:190
 msgid "Incoming ostriches"
-msgstr ""
+msgstr "La 4e autruche descendant boire"
 
 #: skycultures/arabic/star_names.fab:191
 msgid "First outgoing ostriches"
-msgstr ""
+msgstr "La 1ère autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:192
 msgid "Third outgoing ostriches"
-msgstr ""
+msgstr "La 3e autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:193
 msgid "Fourth one of the cavalry's"
