--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-03 20:34+0700\n"
-"PO-Revision-Date: 2012-10-24 04:43+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-11-07 01:18+0000\n"
+"Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-04 04:49+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-07 04:38+0000\n"
+"X-Generator: Launchpad (build 16232)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -576,6 +576,8 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"Poniżej wymienione są te czynności, którym przypisano klawisze. Inne "
+"czynności mogą być dostępne po naciśnięciu przycisku \"%1\"."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
@@ -846,7 +848,7 @@ msgstr "Uniwersytet Harvarda (USA)"
 
 #: src/gui/ShortcutsDialog.cpp:546
 msgid "Action"
-msgstr ""
+msgstr "Czynność"
 
 #: src/gui/ShortcutsDialog.cpp:547
 msgid "Primary shortcut"
