added texture for NGC 7023

--- a/README
+++ b/README
@@ -262,15 +262,18 @@ for more details on the location of the user data directory for your OS.
 		License: released under the Free Art License
 		(http://artlibre.org/licence.php/lalgb.html)
 	4.13 The "earth-clouds" texture includes imagery owned by NASA.
-	See NASA's Visible Earth project at http://visibleearth.nasa.gov/
-	License: 1. The imagery is free of licensing fees
-		 2. NASA requires that they be provided a credit as the owners
-			of the imagery
+		See NASA's Visible Earth project at http://visibleearth.nasa.gov/
+		License: 1. The imagery is free of licensing fees
+			 2. NASA requires that they be provided a credit as the owners
+			    of the imagery
 		The cloud texturing was taken from Celestia (GPL),
 		http://www.shatters.net/celestia/
 	4.14 The folder icon derived from the Tango Desktop Project, used under
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
+	4.15 Image of NGC 7023 from Andrey Kuznetsov, Kepler Observatory
+		http://kepler-observatorium.ru
+		License: Creative Commons Attribution 3.0 Unported
 
 --------------------------------------------------------------------------------
 9. LICENSE
