--- a/po/stellarium-skycultures/pl.po
+++ b/po/stellarium-skycultures/pl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-09-10 21:01+0000\n"
-"Last-Translator: Łukasz M <Unknown>\n"
+"PO-Revision-Date: 2012-11-09 02:11+0000\n"
+"Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:55+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-11-09 04:37+0000\n"
+"X-Generator: Launchpad (build 16250)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -167,7 +167,7 @@ msgstr "Wielka Gromada w Herkulesie"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Galaktyka Andromedy"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
