Launchpad automatic translations update.

--- a/po/stellarium/ky.po
+++ b/po/stellarium/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-03 20:34+0700\n"
-"PO-Revision-Date: 2012-11-01 16:42+0000\n"
+"PO-Revision-Date: 2012-11-10 09:17+0000\n"
 "Last-Translator: blacktext <translatorky@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-04 04:47+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-11 04:35+0000\n"
+"X-Generator: Launchpad (build 16251)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -275,7 +275,7 @@ msgid ""
 "cross each other but it does not preserve area."
 msgstr ""
 "Стереографикалык проекция антика дүйнөсүнөн бери белгилүү, жана оболтон "
-"планисфералык проекция деп аталчы. Бул бири-бирин кесип өткөн йийрилердин "
+"планисфералык проекция деп аталчы. Бул бири-бирин кесип өткөн йирилердин "
 "бурчтарын сактайт, бирок алардын аянтын сактабайт."
 
 #: src/core/StelProjectorClasses.cpp:145
@@ -396,7 +396,7 @@ msgstr "Ката"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr "Табылбады"
+msgstr "Табылган жок"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
@@ -524,7 +524,7 @@ msgstr "Асмандын панорамалык кароосу"
 
 #: src/gui/HelpDialog.cpp:162
 msgid "Arrow keys & left mouse drag"
-msgstr "Жебе клавишалары же чычкандын сол кнопкасы менен ташуу"
+msgstr "Жебе клавишалары менен же чычкандын сол кнопкасы менен ташуу"
 
 #: src/gui/HelpDialog.cpp:164
 msgid "Zoom in/out"
@@ -588,8 +588,8 @@ msgid ""
 "{The Stellarium Wiki} - General information.  You can also find user-"
 "contributed landscapes and scripts here."
 msgstr ""
-"{Stellarium Уики} - Жалпы информация. Бул жерден колдонуучулар салым кылган "
-"ландшафттарын жана сценарийлерин таба аласыз."
+"{Stellarium Уики} - Жалпы информация. Колдонуучулар салым кылган "
+"ландшафттарын жана сценарийлерин бул жерден тапсаңыз болот."
 
 #. TRANSLATORS: The text between braces is the text of an HTML link.
 #: src/gui/HelpDialog.cpp:260
