--- a/README
+++ b/README
@@ -275,6 +275,10 @@ for more details on the location of the user data directory for your OS.
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
+	4.16 Images of NGC7129 
+		from Oleg Bryzgalov 
+		http://olegbr.astroclub.kiev.ua/
+		License: Creative Commons Attribution 3.0 Unported
 
 --------------------------------------------------------------------------------
 9. LICENSE
