Launchpad automatic translations update.

--- a/po/stellarium/sv.po
+++ b/po/stellarium/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-03 20:34+0700\n"
-"PO-Revision-Date: 2012-10-26 12:48+0000\n"
+"PO-Revision-Date: 2012-11-11 23:40+0000\n"
 "Last-Translator: Mikael Hiort af Ornäs <lakritslemmel@hotmail.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-04 04:51+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-12 04:35+0000\n"
+"X-Generator: Launchpad (build 16251)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -6853,15 +6853,15 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Konfigurera observerbarhet"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurera observerbarhetsinsticksmodul"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Showing Options"
-msgstr ""
+msgstr "Visningsalternativ"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:342
 msgid "Today's ephemeris (rise, set, and transit times)"
@@ -6885,23 +6885,23 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Font color and size"
-msgstr ""
+msgstr "Teckenfärg och -storlek"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "Red"
-msgstr ""
+msgstr "Röd"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:351
 msgid "Green"
-msgstr ""
+msgstr "Grön"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:352
 msgid "Blue"
-msgstr ""
+msgstr "Blå"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:353
 msgid "Font Size"
-msgstr ""
+msgstr "Teckenstorlek"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:354
 msgid "Sun altitude at twilight"
