--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-02 08:45+0000\n"
+"PO-Revision-Date: 2012-11-13 08:05+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 05:00+0000\n"
+"X-Launchpad-Export-Date: 2012-11-14 04:38+0000\n"
 "X-Generator: Launchpad (build 16251)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -1463,7 +1463,7 @@ msgstr ""
 
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
-msgstr ""
+msgstr "Вид затмения Солнца Фобосом с горы Олимп 10 января 2068 года."
 
 #: src/translations.h:242
 msgid ""
@@ -1471,6 +1471,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Покрытие Земли Фобосом явление обыденное, как и покрытие Юпитера. Но "
+"покрытия обоих планет в один и тот же день очень редки. Вот одно из таких "
+"покрытий в режиме реального времени, которое произойдёт 23 января 2048 года."
 
 #: src/translations.h:243
 msgid ""
@@ -1479,6 +1482,10 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Фобос бежит впереди Марса и, проходя через Солнце, затмевает его, потом он "
+"возвращается назад и успевает ещё раз частично затмить Солнце до того, как "
+"они оба окажутся закрытыми Марсом, а зачем Солнце с Фобосом выходят из-за "
+"Марса, луна попадает в тень Марса и тускнеет."
 
 #: src/translations.h:244
 msgid ""
@@ -1489,32 +1496,36 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Экскурсия по западным созвездиям."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "Вид Солнца на больших планетах Солнечной системы и Плутоне."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
-msgstr ""
+msgstr "Лучшие в 21-м веке виды Земли с других тел Солнечной системы."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Прохождение Венеры, каким оно было видно 6 июня 2012 года из Сиднея, "
+"Австралия."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
-msgstr ""
+msgstr "Демонстрация аналеммы - пути Солнца по небу в течение года."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Вспышка сверхновой, которую наблюдал Тихо Браге в 1572 году. Плагин "
+"\"Исторические сверхновые\" должен быть включён."
 
 #: src/translations.h:255
 msgid "Andorra"
