--- a/po/stellarium/uk.po
+++ b/po/stellarium/uk.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: stellarium-uk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-01 15:33+0000\n"
+"PO-Revision-Date: 2012-11-13 13:22+0000\n"
 "Last-Translator: Yuri Chornoivan <yurchor@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 05:03+0000\n"
+"X-Launchpad-Export-Date: 2012-11-14 04:38+0000\n"
 "X-Generator: Launchpad (build 16251)\n"
 "X-Poedit-Country: UKRAINE\n"
 "Language: uk\n"
@@ -1468,7 +1468,7 @@ msgstr ""
 
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
-msgstr ""
+msgstr "Затемнення Сонця Фобосом, вигляд з гори Олімп, 10 січня 2068 року."
 
 #: src/translations.h:242
 msgid ""
@@ -1476,6 +1476,10 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Затемнення Фобосом Землі, як і затемнення Юпітера, є доволі частими, але "
+"одночасне затемнення обох небесних тіл протягом одного дня є дуже рідкісним "
+"явищем. Це показ затемнення, яке станеться 23 січня 2048 року у режимі "
+"реального часу."
 
 #: src/translations.h:243
 msgid ""
@@ -1484,6 +1488,10 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Фобос випереджає Марс і затемнює Сонце, проходить диском і повертається, "
+"знову частково затемнюючи Сонце, потім Марс повністю затінює Сонце і Фобос, "
+"згодом Фобос виходить з диска Сонця і потрапляє до тіні Марса з "
+"притлумленням свічення."
 
 #: src/translations.h:244
 msgid ""
@@ -1494,32 +1502,37 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Тур класичною системою сузір’їв."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "Вигляд Сонця з великих планет Сонячної системи та Плутона."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"Найкращі миттєвості спостереження Землі з тіл Сонячної системи протягом 21 "
+"сторіччя."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Транзит Венери, спостереження з Сіднею, Австралія, 6 червня 2012 року."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
-msgstr ""
+msgstr "Показ аналеми — шляху Сонця небом протягом року."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Спалах наднової, який спостерігав Тихо Браґе у 1572 році. Для перегляду має "
+"бути увімкнено додаток показу наднових."
 
 #: src/translations.h:255
 msgid "Andorra"
