Launchpad automatic translations update.

--- a/po/stellarium/gl.po
+++ b/po/stellarium/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-02 14:09+0000\n"
+"PO-Revision-Date: 2012-11-15 00:05+0000\n"
 "Last-Translator: Manuel Rosales Graña <manuel.rosales@mundo-r.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 04:55+0000\n"
-"X-Generator: Launchpad (build 16251)\n"
+"X-Launchpad-Export-Date: 2012-11-15 04:41+0000\n"
+"X-Generator: Launchpad (build 16265)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1463,6 +1463,7 @@ msgstr ""
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
 msgstr ""
+"Phobos eclipsando o Sol, visto dende o Monte Olimpo o 10 de xaneiro de 2068."
 
 #: src/translations.h:242
 msgid ""
@@ -1470,6 +1471,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"As ocultacións de Phobos da Terra son comúns, así como as ocultacións de "
+"Xúpiter. Pero a ocultación de ambos o mesmo día é un feito moi raro. Aquí "
+"está o que ten lugar o 23/01/2048. En tempo real."
 
 #: src/translations.h:243
 msgid ""
@@ -1478,6 +1482,10 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Phobos pasa por diante de Marte e eclilpsa o sol, pasa a través del e, a "
+"continuación, retrocede cara ao sol e eclípsao só parcialmente(só se ve en "
+"SH) de novo, entón Marte eclipsa totalmente o sol e mais Phobos, e despois "
+"cando Phobos emerxe dende o sol pasa a través da sombra de Marte e escurece."
 
 #: src/translations.h:244
 msgid ""
@@ -1487,32 +1495,38 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Unha volta polas constelacións do oeste."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "Vista do Sol dende os grandes planetas do Sistema Solar e Plutón."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"As mellores vistas da Terra dende outros corpos do Sistema Solar no século "
+"XXI"
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Tránsito de Venus visto dende Sydney, Australia, o 6 de xuño de 2012."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Unha demostración do analemma - o camiño do Sol polo ceo durante o ano."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Resplandor da supernova observada por Tycho Brahe, en 1572. O plugin de "
+"Supernovas ten que estar activado."
 
 #: src/translations.h:255
 msgid "Andorra"
