Launchpad automatic translations update.

--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-05 15:30+0000\n"
+"PO-Revision-Date: 2012-11-15 21:46+0000\n"
 "Last-Translator: Dennis Baudys <Unknown>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 04:55+0000\n"
-"X-Generator: Launchpad (build 16251)\n"
+"X-Launchpad-Export-Date: 2012-11-16 04:35+0000\n"
+"X-Generator: Launchpad (build 16272)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1473,6 +1473,8 @@ msgstr ""
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
 msgstr ""
+"Phobos, wie er die Sonne verdeckt, von Olympus Mons aus am 10. Januar, 2068 "
+"gesehen."
 
 #: src/translations.h:242
 msgid ""
@@ -1496,20 +1498,26 @@ msgstr "Bildschirmschoner mit insgesamt 171 Ereignissen im Sonnensystem."
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Eine Tour durch die westlichen Sternbilder."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
 msgstr ""
+"Einen Blick auf die Sonne von den großen Planeten des Sonnensystems und von "
+"Pluto aus werfen."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"Die besten Ansichten der Erde von anderen Himmelskörpern des Sonnensystems "
+"aus im 21. Jahrhundert."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Venus-Transit, wie er von Sydney, Australien aus am 6. Juni 2012 gesehen "
+"wurde."
 
 #: src/translations.h:249
 msgid ""
@@ -1522,6 +1530,8 @@ msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Aufleuchten der Supernova, wie sie von Tycho Brahe aus im Jahr 1572 gesehen "
+"wurde. Die Supernovae-Erweiterung muss aktiviert sein."
 
 #: src/translations.h:255
 msgid "Andorra"
