Launchpad automatic translations update.

--- a/po/stellarium-skycultures/si.po
+++ b/po/stellarium-skycultures/si.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2011-09-26 20:32+0000\n"
-"Last-Translator: අනුරාධ Jayathilaka <astroanu2004@yahoo.co.uk>\n"
+"PO-Revision-Date: 2012-11-16 16:52+0000\n"
+"Last-Translator: Dileepa Rajapaksa(දිලීප රාජපක්ෂ) <Unknown>\n"
 "Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:56+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-11-17 04:35+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,213,-1,-1\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -164,7 +164,7 @@ msgstr "හර්කියුලිස් තරුපෙකුර"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "ඇන්ඩ්‍රෙමීඩා මණ්දාකිණිය"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
