--- a/po/stellarium-skycultures/sk.po
+++ b/po/stellarium-skycultures/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-10-28 09:28+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-11-16 12:11+0000\n"
+"Last-Translator: Juraj Kubica <Juraj.Kubica@seznam.cz>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:56+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-11-17 04:35+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -59,7 +59,7 @@ msgstr "Bodeho hmlovina"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Galaxia cigara"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -76,7 +76,7 @@ msgstr "Bublinová hmlovina"
 
 #: nebulae/default/ngc2000names.dat:130
 msgid "Bug nebula"
-msgstr ""
+msgstr "Hmlovina chrobák"
 
 #: nebulae/default/ngc2000names.dat:131
 msgid "Butterfly cluster"
@@ -100,11 +100,11 @@ msgstr "Hviezdokopa Vianočný stromček"
 
 #: nebulae/default/ngc2000names.dat:136
 msgid "Cocoon nebula"
-msgstr ""
+msgstr "hmlovina kokón"
 
 #: nebulae/default/ngc2000names.dat:137
 msgid "Cone nebula"
-msgstr ""
+msgstr "Hmlovina kužeľ"
 
 #: nebulae/default/ngc2000names.dat:138 nebulae/default/ngc2000names.dat:139
 #: nebulae/default/ngc2000names.dat:140 nebulae/default/ngc2000names.dat:141
@@ -147,7 +147,7 @@ msgstr "Oči"
 
 #: nebulae/default/ngc2000names.dat:155
 msgid "Filamentary nebula"
-msgstr ""
+msgstr "Riasová hmlovina"
 
 #: nebulae/default/ngc2000names.dat:156
 msgid "Flaming Star nebula"
@@ -231,7 +231,7 @@ msgstr "Myš"
 
 #: nebulae/default/ngc2000names.dat:177 nebulae/default/ngc2000names.dat:178
 msgid "Network nebula"
-msgstr ""
+msgstr "Sieťová hmlovina"
 
 #: nebulae/default/ngc2000names.dat:179
 msgid "North America nebula"
