--- a/po/stellarium/si.po
+++ b/po/stellarium/si.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-05-21 06:52+0000\n"
-"Last-Translator: පසිඳු කාවින්ද <info@pk-soft.tk>\n"
+"PO-Revision-Date: 2012-11-16 16:49+0000\n"
+"Last-Translator: Dileepa Rajapaksa(දිලීප රාජපක්ෂ) <Unknown>\n"
 "Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 05:01+0000\n"
-"X-Generator: Launchpad (build 16251)\n"
+"X-Launchpad-Export-Date: 2012-11-17 04:34+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 "X-Poedit-Country: SRI LANKA\n"
 "X-Poedit-Language: Estonian\n"
 
@@ -37,7 +37,7 @@ msgstr "ක්ෂිතිජය"
 
 #: src/core/modules/GridLinesMgr.cpp:580
 msgid "Galactic Plane"
-msgstr ""
+msgstr "මණ්දාකිණි තලය"
 
 #: src/core/modules/LandscapeMgr.cpp:500
 msgid "Author: "
@@ -781,15 +781,15 @@ msgstr ""
 
 #: src/gui/ScriptConsole.cpp:75
 msgid "clear text"
-msgstr ""
+msgstr "පැහැදිලි අක්ෂර"
 
 #: src/gui/ScriptConsole.cpp:76
 msgid "clear images"
-msgstr ""
+msgstr "පැහැදිලි පින්තූර"
 
 #: src/gui/ScriptConsole.cpp:77
 msgid "natural"
-msgstr ""
+msgstr "ස්වාභාවික"
 
 #: src/gui/ScriptConsole.cpp:78
 msgid "starchart"
@@ -805,23 +805,23 @@ msgstr ""
 
 #: src/gui/SearchDialog.cpp:535
 msgid "University of Strasbourg (France)"
-msgstr ""
+msgstr "Strasbourg විශ්ව විද්‍යාලය (ප්‍රංශය)"
 
 #: src/gui/SearchDialog.cpp:536
 msgid "Harvard University (USA)"
-msgstr ""
+msgstr "Harvard විශ්ව විද්‍යාලය (ඇමරිකානු එක්සත් ජනපදය )"
 
 #: src/gui/ShortcutsDialog.cpp:499
 msgid "Action"
-msgstr ""
+msgstr "ක්‍රියාව"
 
 #: src/gui/ShortcutsDialog.cpp:500 src/ui_shortcutsDialog.h:198
 msgid "Primary shortcut"
-msgstr ""
+msgstr "ප්‍රාථමික කෙටිමග"
 
 #: src/gui/ShortcutsDialog.cpp:501 src/ui_shortcutsDialog.h:199
 msgid "Alternative shortcut"
-msgstr ""
+msgstr "විකල්ප කෙටිමං"
 
 #: src/main.cpp:349
 msgid "This system does not support OpenGL."
@@ -1264,17 +1264,17 @@ msgstr ""
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:170
 msgid "Trees"
-msgstr ""
+msgstr "රුක්ෂ"
 
 #. TRANSLATORS: Landscape name: Hurricane Ridge
 #: src/translations.h:174
 msgid "Hurricane"
-msgstr ""
+msgstr "සැඩ කුණාටුව"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:176
 msgid "Ocean"
-msgstr ""
+msgstr "සයුර"
 
 #. TRANSLATORS: Landscape name: Garching bei Munchen
 #: src/translations.h:178
@@ -1294,7 +1294,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:192
 msgid "Total Lunar Eclipse"
-msgstr ""
+msgstr "පූර්ණ චන්ද්‍ර ග්‍රහණය"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:194
@@ -1369,7 +1369,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:222
 msgid "Transit of Venus"
-msgstr ""
+msgstr "සිකුරු සංක්‍රාන්තිය"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:224
@@ -1487,15 +1487,15 @@ msgstr ""
 
 #: src/translations.h:256
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "එක්සත් අරාබි එමිර් රාජ්‍යය"
 
 #: src/translations.h:257
 msgid "Afghanistan"
-msgstr ""
+msgstr "ඇෆ්ගනිස්ථානය"
 
 #: src/translations.h:258
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "ඇන්ටිගුවා සහ බාර්බඩා"
 
 #: src/translations.h:259
 msgid "Anguilla"
@@ -6795,19 +6795,19 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "Red"
-msgstr ""
+msgstr "රතු"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:351
 msgid "Green"
-msgstr ""
+msgstr "කොළ"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:352
 msgid "Blue"
-msgstr ""
+msgstr "නිල්"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:353
 msgid "Font Size"
-msgstr ""
+msgstr "අක්‍ෂර ප්‍රමාණය"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:354
 msgid "Sun altitude at twilight"
