--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-15 10:15+0000\n"
+"PO-Revision-Date: 2012-11-17 02:19+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-16 04:35+0000\n"
-"X-Generator: Launchpad (build 16272)\n"
+"X-Launchpad-Export-Date: 2012-11-17 04:34+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -1552,6 +1552,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Las ocultaciones de la Tierra por Fobos son comunes, así como las "
+"ocultaciones de Júpiter. Pero las ocultaciones de ambos en el mismo día son "
+"muy raras. Aquí es una que toma lugar 23/1/2048. En velocidad real."
 
 #: src/translations.h:243
 msgid ""
@@ -1560,6 +1563,11 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Fobos se encamina delante de Marte y eclipsa el sol, pasa a través de él y "
+"después retrograda de vuelta hacia el sol y sólo lo eclipsa parcialmente "
+"(solo visto en el HS) otra vez, luego Marte eclipsa totalmente el sol y "
+"Fobos, y posteriormente a como Fobos emerge desde el sol pasa a través de la "
+"sombra de Marte y se desvanece."
 
 #: src/translations.h:244
 msgid ""
@@ -1592,12 +1600,16 @@ msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Una demostración del analema - la ruta del sol a través del cielo durante el "
+"año."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Destello de la supernova observada por tycho Brahe en 1572. El Complemento "
+"de supernovas debe habilitarse."
 
 #: src/translations.h:255
 msgid "Andorra"
